<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Application -->
	<string name="app_name">Chinese French Dictionary</string>

	<!-- Import data -->
	<string name="import_service_label">Dictionary import / update</string>
	<string name="import_welcome_title">Welcome</string>
	<string name="import_welcome_msg">The dictionary needs to be downloaded first.\nPlease make sure your device is connected to the Internet.\n6.6 MB will be downloaded and about 25 MB will be needed during the installation process.\n\nDo you want to start the download now?</string>
	<string name="import_welcome_msg_local">The dictionary from the external storage will be installed.\nAbout 25 MB will be needed during the installation process.\nAfter the installation, the %s file will be deleted automatically from your external storage.\n\nDo you want to start the installation now?</string>
	<string name="import_processing_msg">Installing dictionary data (6.6M).\nPlease wait…</string>
	<string name="import_start_service_btn">Install</string>
	<string name="import_quit_activity_btn">Exit</string>
	<string name="import_done">Done</string>
	<string name="import_download_text">Downloading dictionary…</string>
	<string name="import_install_text">Installing dictionary…</string>
	<string name="import_dialog_title">Completed</string>
	<string name="import_dialog_msg">Thank you for your patience.\nYou can now start using the application!</string>
	<string name="import_dialog_btn">OK</string>
	<string name="import_storage_dialog_title">Installing data</string>
	<string name="import_storage_dialog_msg">Where do you want to install data?</string>
	<string name="import_storage_dialog_sdcard">SD card (recommended)</string>
	<string name="import_storage_dialog_device">Device internal memory</string>
	<string name="import_err_dialog_title">Error</string>
	<string name="import_err_too_old">The software version you are currently using is too old and cannot be used anymore.\nPlease update the program first and try again.</string>
	<string name="import_err_too_old_update">Open Google Play Store to update</string>
	<string name="import_err_cannot_download">Cannot download the dictionary.\nPlease make sure your device is connected to the Internet and try again.</string>
	<string name="import_err_wrong_dictionary_file">The dictionary was not properly downloaded.\nPlease try again.</string>
	<string name="import_err_wrong_dictionary_file_local">The dictionary file is not valid.</string>
	<string name="import_err_retry">Retry</string>
	<string name="import_err_cancel">Cancel</string>
	<string name="import_err_exit">Exit</string>
	<string name="import_cancel_btn">Cancel</string>
	<string name="import_notification_import_title">Importing CN/FR dictionary data</string>
	<string name="import_notification_import_msg">Click to see progress</string>
	<string name="import_notification_success_title">CN/FR dictionary data successfully imported</string>
	<string name="import_notification_success_msg">Click to start using the application</string>
	<string name="import_notification_failed_title">Failed to import CN/FR dictionary data</string>
	<string name="import_notification_failed_msg">Click to see the reason and try again</string>

	<!-- Update data -->
	<string name="update_welcome_title">Update dictionary</string>
	<string name="update_welcome_msg">A dictionary update is available.\nPlease make sure your device is connected to the Internet.\n6.6 MB will be downloaded and about 25 MB will be needed during the update process.\n\nDo you want to start the update now?</string>
	<string name="update_welcome_msg_local">A dictionary update is available.\nAbout 25 MB will be needed during the update process.\nAfter the update, the %s file will be deleted automatically from your external storage.\n\nDo you want to start the update now?</string>
	<string name="update_processing_msg">Updating dictionary data (6.6M).\nPlease wait…</string>
	<string name="update_start_service_btn">Update</string>
	<string name="update_quit_activity_btn">Cancel</string>
	<string name="update_dialog_msg">Dictionary has been successfully updated!\nThank you for your patience.</string>
	<string name="update_notification_import_title">Updating CN/FR dictionary data</string>
	<string name="update_notification_success_title">CN/FR dictionary data successfully updated</string>
	<string name="update_notification_success_msg">Click to use the application</string>
	<string name="update_notification_title">A dictionary update is available</string>
	<string name="update_notification_msg">Click to start the update</string>
	<string name="update_backup_text">Backing up personal data…</string>
	<string name="update_restore_text">Restoring personal data…</string>

	<!-- Search entry -->
	<string name="search_intro">Tap in the box above to start searching for a word.</string>
	<string name="search_press_back_twice_exit">Press BACK once more to exit</string>
	<string name="search_hint_text">Search French, 汉字, Pinyin</string>
	<string name="search_empty_text">Search should not be empty</string>
	<string name="search_no_results">No Results</string>
	<string name="search_loading">Loading…</string>
	<string name="search_btn_french">French</string>
	<string name="search_btn_pinyin">Pinyin</string>

	<!-- Word meaning -->
	<plurals name="meaning_title">
		<item quantity="one">Meaning:</item>
		<item quantity="other">Meanings:</item>
	</plurals>
	<string name="meaning_title_bullet">•</string>
	<string name="meaning_star_desc">star</string>
	<string name="meaning_starred_date_format">yyyy-MM-dd</string>
	<string name="meaning_starred_on">Starred on %s</string>
	<string name="meaning_not_starred">Not starred yet</string>
	<string name="meaning_copy_title">Select…</string>
	<string name="meaning_copy_text">Copy %s</string>
	<string name="meaning_see_text">See %s\'s meaning</string>
	<string name="meaning_see_stroke">See %s\'s stroke order</string>
	<string name="meaning_listen">Listen %s</string>
	<string name="meaning_copied">copied to clipboard</string>
	<string name="meaning_no_result">No result found.</string>
	<string name="meaning_no_result_press_back">\nPlease press BACK and search for another word.</string>

	<!-- Menus -->
	<string name="main_menu_about">About</string>
	<string name="main_menu_settings">Settings</string>
	<string name="main_menu_starred">Starred</string>
	<string name="starred_menu_refresh">Refresh</string>
	<string name="starred_menu_back">Back</string>

	<!-- About dialog (see also ~/assets/about/about.html) -->
	<string name="about_title">About</string>

	<!-- Starred words -->
	<string name="starred_words_title">Starred Words</string>

	<!-- Settings -->
	<string name="settings_cat_general">General</string>
	<string name="settings_chinese_chars">Simplified/Traditional</string>
	<string name="settings_chinese_chars_sum">Display simplified or traditional characters</string>
	<string name="settings_chinese_chars_simp">Simplified</string>
	<string name="settings_chinese_chars_trad">Traditional</string>
	<string name="settings_chinese_chars_both_st">Simpl. [Trad.]</string>
	<string name="settings_chinese_chars_both_ts">Trad. [Simpl.]</string>
	<string name="settings_pinyin">Phonetic System</string>
	<string name="settings_pinyin_sum">Choose between pīnyīn, pin1yin1, pinyin or zhuyin</string>
	<string name="settings_hanzi_coloring">Hanzi Coloring</string>
	<string name="settings_hanzi_coloring_sum">Color Chinese characters depending on their tones</string>
	<string name="settings_cat_display">Appearance</string>
	<string name="settings_text_size">Text size</string>
	<string name="settings_text_size_sum">Choose between small, medium or big</string>
	<string name="settings_text_size_small">Small</string>
	<string name="settings_text_size_medium">Medium</string>
	<string name="settings_text_size_big">Big</string>
	<string name="settings_dark_theme">Night Mode</string>
	<string name="settings_dark_theme_sum">Change the display to a dark theme</string>
	<string name="settings_cat_advanced">Advanced</string>
	<string name="settings_db_installtts">Speech synthesis</string>
	<string name="settings_db_installtts_sum">Install Chinese voices</string>
	<string name="settings_db_updates">Dictionary updates</string>
	<string name="settings_db_updates_sum">Be notified when an update is available</string>
	<string name="settings_db_importexport">Backup / Restore data</string>
	<string name="settings_db_importexport_sum">Import or export starred words in a xml file</string>

	<!-- Backup / Restore starred words -->
	<string name="backup_restore_backup">Backup to sd card</string>
	<string name="backup_restore_restore">Restore from xml file</string>
	<string name="backup_restore_nosdcard">You must have a sdcard to use this feature</string>
	<string name="backup_restore_processing">Processing. Please wait…</string>
	<string name="backup_restore_saved">File saved in %s</string>
	<string name="backup_restore_not_found">File cfdict.xml was not found in sdcard</string>
	<string name="backup_restore_restore_ok">Starred words successfully restored</string>
	<string name="backup_restore_restore_ko">Error while restoring starred words</string>

	<!-- Install TTS data -->
	<string name="install_tts_title">Install Speech Synthesis data</string>
	<string name="install_tts_desc">You need to install and open the \"Chinese Dictionary and TTS\" (free) application to enable Speech Synthesis (TTS) support.\n\nThe \"TTS\" application will automatically download the voice data (10MB) on your sdcard at the first launch.\n\nNote that once the voice data are downloaded, you can uninstall the \"TTS\" application anytime you want. Voice data will be kept and can still be used with this dictionary.</string>
	<string name="install_tts_btn">Install from Google Play</string>

	<!-- Local dictionary installation -->
	<string name="install_local_title">Install local dictionary</string>
	<string name="install_local_desc">A dictionary file was found on the external storage. Do you want to install this dictionary?\n\nTo remove this alert, delete the %s file on your external storage</string>
	<string name="install_local_yes">Yes</string>
	<string name="install_local_no">No</string>
</resources>
